dfir_rs/tests/compile-fail-stable/surface_degenerate_merge.rs
../compile-fail/surface_degenerate_merge.rs